frontend: prevent the image in the thumbnail modal from being cropped

--- a/dearrow-browser-frontend/index.scss
+++ b/dearrow-browser-frontend/index.scss
@@ -385,7 +385,9 @@ body {
   .thumbnail {
     flex-grow: 1;
     flex-shrink: 1;
+    min-width: 0;
     min-height: 0;
+    max-width: 100%;
   }
 
   h2, h3 {
